+; also standardize on '§' instead of '<strong>Section</strong>'

--- a/404.page
+++ b/404.page
@@ -56,7 +56,7 @@ Try to remember... Other options:
 - [GPT-2 Neural Network Poetry](/gpt-2 "Branwen & Presser 2019"){.backlink-not .icon-not}
 - [Darknet Market Archives (2013–2015)](/dnm-archive "Branwen 2013"){.backlink-not .icon-not}
 - [Bitcoin is Worse is Better](/bitcoin-is-worse-is-better){.backlink-not .icon-not}
-- [The Neural Net Tank Urban Legend](/tanks "Branwen 2011"){.backlink-not .icon-not}
+- [The Neural Net Tank Urban Legend](/tank "Branwen 2011"){.backlink-not .icon-not}
 - [Changelog](/changelog){.backlink-not .icon-not}
 - [Neon Genesis Evangelion source anthology](/otaku "Branwen 2009"){.backlink-not .icon-not}
 - [‘Story Of Your Life’ Is Not A Time-Travel Story](/story-of-your-life "Branwen 2012"){.backlink-not .icon-not}
