link icons: finish google->alphabet move by updating hardwired instances

--- a/css/links.css
+++ b/css/links.css
@@ -663,7 +663,7 @@ a[data-link-icon='github']::after {
     opacity: 0.65;
 }
 
-a[data-link-icon='google']::after {
+a[data-link-icon='alphabet']::after {
     --link-icon-size: 0.65em;
     --link-icon-offset-x: 0.15em;
     --link-icon-offset-y: 0.3em;
