--- a/template/default.html
+++ b/template/default.html
@@ -152,6 +152,8 @@
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
           <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+
+          <a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
         </div>
 
       </article>
@@ -160,7 +162,7 @@
     <!-- SSI: Versioned external CSS/JS assets -->
     <!-- INLINED-FOOT-BEGIN --><!--#include virtual="/static/include/inlined-foot.html" --><!-- INLINED-FOOT-END -->
 
-    <!-- 2×2 A/B test of indentation vs newlining, and justified vs not  -->
+    <!-- 2×2 A/B test of indentation vs newline, and justified vs not  -->
     <script id="justificationindentation-abtest-js">
     randomness = [2,3,1,4,2,4,3,1,4,2,3,1,1,3,2,4,4,2,3,1,3,2,1,4,3,4,1,2,1,4,3,2,2,3,1,4,4,2,1,3,2,3,1,4,1,3,4,2,2,3,4,1,1,3,4,2,4,3,1,2,1,2,3,4,2,4,1,3,2,3,1,4,4,2,1,3,1,2,3,4,1,4,3,2,3,1,4,2,4,2,3,1,1,3,2,4,4,2,1,3,4,1,3,2,4,1,2,3,1,2,4,3,4,2,1,3,1,3,4,2,3,2,1,4,4,3,1,2,1,2,3,4,3,2,4,1,2,3,1,4,4,3,2,1,1,4,2,3,3,1,2,4,4,2,3,1,3,4,2,1,1,2,4,3,1,3,4,2,3,2,1,4,4,1,3,2,3,4,2,1,2,4,1,3,2,3,4,1,1,4,3,2,3,2,4,1,2,1,3,4,3,4,2,1,4,1,2,3,3,2,4,1,4,3,2,1,3,4,2,1,3,2,1,4,2,4,3,1,1,3,4,2,4,1,3,2,1,3,4,2,2,4,1,3,1,4,2,3,2,4,3,1,1,4,3,2,2,3,4,1,4,2,3,1,2,4,1,3,3,2,1,4,2,1,3,4,4,3,1,2,3,4,2,1,1,4,3,2,1,3,4,2,4,2,1,3,2,1,4,3,1,3,2,4,4,3,1,2,3,4,2,1,1,2,3,4,4,3,2,1,2,1,4,3,4,2,3,1,4,2,3,1,4,1,2,3,4,1,3,2,2,3,1,4,3,1,2,4,3,2,4,1,2,3,1,4,1,3,4,2,3,1,4,2,2,1,3,4];
     var loadDate = (Math.round((new Date().setHours(23) - new Date(new Date().getYear()+1900, 0, 1, 0, 0, 0))/1000/60/60/24)) - 1;
