default.html: footer: aotd: tweak - needs to be in its own .markdownBody <div> container to render fully, with popups enabled etc

--- a/template/default.html
+++ b/template/default.html
@@ -152,8 +152,11 @@
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
           <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+        </div>
 
-          <a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
+        <!-- re-enable .markdownBody so the annotation gets fully-styled/enabled, while being centered & full-sized (rather than squashed in a column). -->
+        <div id="aotd" class="markdownBody">
+          <p><a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
         </div>
 
       </article>
