Hide extraneous line in sidebar on /index

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -741,6 +741,7 @@ body.index article #markdownBody section:not(.collapse) > h1:first-child a {
     more compact & classy.
  */
 body.index #sidebar a.patreon,
+body.index #sidebar a.annotations-newest::after,
 body.index #TOC,
 body.index #page-metadata,
 body.index header {
