rename swiss spiral roll to correct the spelling now that it's enabled

--- a/template/default.html
+++ b/template/default.html
@@ -148,13 +148,15 @@
         </nav>
 
         <div id="footer">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback"><span class="smallcaps">[Submit Anonymous Feedback]</span></a></p>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback">[Submit Anonymous Feedback]</a></p>
           <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
 
           <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+
+          <a class="include include-spinner-not icon-not" href="/metadata/today-link.html">[Site Of The Day]</a>
         </div>
 
-        <!-- re-enable .markdownBody so the annotation gets fully-styled/enabled, while being centered & full-sized (rather than squashed in a column). -->
+        <!-- NOTE: need to re-enable .markdownBody so the annotation gets fully-styled/enabled, while being centered & full-sized (rather than squashed in a column). -->
         <div id="aotd" class="markdownBody">
           <p><a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
         </div>
