--- a/css/default.css
+++ b/css/default.css
@@ -662,6 +662,102 @@ section:target > :first-child a::after {
     margin-bottom: 0;
 }
 
+/*	TOC collapsing.
+ */
+
+#TOC.collapsed {
+	position: absolute;
+	width: 1.5rem;
+	height: 1.5rem;
+	box-sizing: border-box;
+    margin: 0;
+	border: 1px dotted currentColor;
+	background-color: transparent;
+    background-image: none;
+	top: 260px;
+    right: calc(100% + 30px);
+}
+@media all and (max-width: 900px) {
+    #TOC.collapsed {
+        position: relative;
+        top: unset;
+        right: unset;
+        width: 1.75rem;
+        height: 1.75rem;
+        margin: -0.5em auto 1.25em auto;
+    }
+}
+
+#TOC.collapsed > ul {
+	display: none;
+}
+
+#TOC.collapsed::after {
+	content: url('/static/img/icon/list-tree.svg');
+	position: absolute;
+	cursor: pointer;
+
+	--padding: 3px;
+	width: calc(100% - (2 * var(--padding)));
+	height: calc(100% - (2 * var(--padding)));
+	left: var(--padding);
+	top: var(--padding);
+
+	opacity: 0.75;
+}
+#TOC.collapsed:hover::after {
+	opacity: 1.0;
+}
+
+#TOC .toc-collapse-toggle-button {
+	appearance: none;
+    border: none;
+    background-color: transparent;
+    color: inherit;
+    font-family: var(--GW-sans-serif-font-stack);
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: inherit;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1px 3px;
+    z-index: 1;
+    opacity: 0.5;
+    cursor: pointer;
+}
+#TOC .toc-collapse-toggle-button:hover {
+    opacity: 1.0;
+}
+#TOC.collapsed .toc-collapse-toggle-button {
+    width: 100%;
+    height: 100%;
+}
+
+@media all and (max-width: 649px) {
+    #TOC:not(.collapsed) {
+        margin-top: 3rem;
+    }
+    #TOC:not(.collapsed) .toc-collapse-toggle-button {
+        top: -1.75em;
+        right: unset;
+        left: -1px;
+        border: inherit;
+        background-color: inherit;
+        margin: auto;
+        width: 2.125em;
+        height: 1.75em;
+        padding: 3px;
+        box-sizing: border-box;
+        opacity: 1.0;
+        background-image: url('/static/img/icon/eye-slash.svg');
+        background-origin: content-box;
+        background-repeat: no-repeat;
+    }
+}
+
+
 /**********/
 /* FOOTER */
 /**********/
