--- a/css/default.css
+++ b/css/default.css
@@ -671,17 +671,17 @@ section:target > :first-child a::after {
 	height: 1.5rem;
 	box-sizing: border-box;
     margin: 0;
-	border: 1px dotted currentColor;
+	border: none;
 	background-color: transparent;
     background-image: none;
-	top: 260px;
-    right: calc(100% + 30px);
+	top: 340px;
+	left: 10px;
 }
 @media all and (max-width: 900px) {
     #TOC.collapsed {
         position: relative;
         top: unset;
-        right: unset;
+        left: unset;
         width: 1.75rem;
         height: 1.75rem;
         margin: -0.5em auto 1.25em auto;
@@ -692,27 +692,14 @@ section:target > :first-child a::after {
 	display: none;
 }
 
-#TOC.collapsed::after {
-	content: url('/static/img/icon/list-tree.svg');
-	position: absolute;
-	cursor: pointer;
-
-	--padding: 3px;
-	width: calc(100% - (2 * var(--padding)));
-	height: calc(100% - (2 * var(--padding)));
-	left: var(--padding);
-	top: var(--padding);
-
-	opacity: 0.75;
-}
-#TOC.collapsed:hover::after {
-	opacity: 1.0;
-}
-
 #TOC .toc-collapse-toggle-button {
 	appearance: none;
     border: none;
     background-color: transparent;
+    background-image: url('/static/img/icon/eye-slash.svg');
+    background-origin: content-box;
+    background-repeat: no-repeat;
+    border: 1px dotted currentColor;
     color: inherit;
     font-family: var(--GW-sans-serif-font-stack);
     font-weight: inherit;
@@ -720,17 +707,20 @@ section:target > :first-child a::after {
     font-size: inherit;
     padding: 0;
     position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1px 3px;
+    width: 2em;
+    height: 1.75em;
+    padding: 3px 2px 2px 2px;
+    top: -1px;
+    right: -1px;
     z-index: 1;
-    opacity: 0.5;
+    opacity: 0.65;
     cursor: pointer;
 }
 #TOC .toc-collapse-toggle-button:hover {
     opacity: 1.0;
 }
 #TOC.collapsed .toc-collapse-toggle-button {
+    background-image: url('/static/img/icon/list-tree.svg');
     width: 100%;
     height: 100%;
 }
@@ -751,9 +741,6 @@ section:target > :first-child a::after {
         padding: 3px;
         box-sizing: border-box;
         opacity: 1.0;
-        background-image: url('/static/img/icon/eye-slash.svg');
-        background-origin: content-box;
-        background-repeat: no-repeat;
     }
 }
 
