--- a/css/default.css
+++ b/css/default.css
@@ -39,6 +39,13 @@
     --GW-popins-popin-footer-bar-height: 1.75rem;
 }
 
+:root {
+	--GW-svg-chevron-left: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23CCC"/></svg>');
+	--GW-svg-chevron-left-hover: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23FFF"/></svg>');
+	--GW-svg-chevron-down: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23CCC"/></svg>');
+	--GW-svg-chevron-down-hover: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23FFF"/></svg>');
+}
+
 
 /*********************/
 /* ARTICLE CONTAINER */
@@ -184,23 +191,23 @@
     text-align: right;
     color: var(--GW-collapse-disclosure-button-top-part-text-color);
     padding: 1rem 3rem 0.75rem 3rem;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23CCC"/></svg>');
+    background-image: var(--GW-svg-chevron-left);
     background-repeat: no-repeat;
     background-position: calc(100% - 1rem) 0.625rem;
     background-size: auto 1.5rem;
     box-sizing: border-box;
 }
 .disclosure-button:hover::before {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23FFF"/></svg>');
+    background-image: var(--GW-svg-chevron-left-hover);
     color: var(--GW-collapse-disclosure-button-text-hover-color);
 }
 .disclosure-button:checked::before {
     content: "Click to collapse";
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23CCC"/></svg>');
+    background-image: var(--GW-svg-chevron-down);
     background-position: calc(100% - 0.75rem) 0.75rem;
 }
 .disclosure-button:checked:hover::before {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23FFF"/></svg>');
+    background-image: var(--GW-svg-chevron-down-hover);
 }
 
 /*  Bottom part of disclosure button.
@@ -666,71 +673,92 @@ section:target > :first-child a::after {
  */
 
 #TOC.collapsed {
-	position: absolute;
-	width: 1.5rem;
-	height: 1.5rem;
-	box-sizing: border-box;
-    margin: 0;
-	border: none;
-	background-color: transparent;
-    background-image: none;
-	top: 400px;
-	left: 10px;
+	height: 1.75rem;
+    box-sizing: border-box;
+}
+#TOC.collapsed + * {
+    clear: both;
+}
+#TOC.collapsed::before {
+    content: "[Contents]";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    padding: 0 0 0 0.5em;
+    display: flex;
+    align-items: center;
+    z-index: 2;
+    pointer-events: none;
+    font-size: 1.125em;
+    font-weight: bold;
+    opacity: 0.5;
+}
+@media only screen and (hover: hover) {
+	#TOC.collapsed:hover::before {
+		opacity: 1.0;
+	}
 }
 @media all and (max-width: 900px) {
-    #TOC.collapsed {
-        position: relative;
-        top: unset;
-        left: unset;
-        width: 1.75rem;
-        height: 1.75rem;
-        margin: -0.5em auto 1.25em auto;
-    }
-    body[class*='-index'] #TOC.collapsed {
-    	margin: 0 auto -1em auto;
+    #TOC.collapsed::before {
+        padding: 0 0.5em;
+        right: 0;
+        margin: auto;
+        justify-content: center;
     }
 }
 
 #TOC.collapsed > ul {
-	display: none;
+    max-height: 0;
+    overflow: hidden;
 }
 
 #TOC .toc-collapse-toggle-button {
 	appearance: none;
     border: none;
-    background-color: transparent;
-    background-image: url('/static/img/icon/eye-slash.svg');
+    background-color: inherit;
+    background-image: var(--GW-svg-chevron-down);
     background-origin: content-box;
     background-repeat: no-repeat;
-    border: 1px dotted currentColor;
+    background-position: center;
+    position: absolute;
+    width: 2em;
+    height: 1.75em;
+    padding: 0.25em 0.375em 0.25em 0.375em;
+    top: 0;
+    right: 0;
     color: inherit;
     font-family: var(--GW-sans-serif-font-stack);
     font-weight: inherit;
     font-style: inherit;
     font-size: inherit;
-    padding: 0;
-    position: absolute;
-    width: 2em;
-    height: 1.75em;
-    padding: 3px 2px 2px 2px;
-    top: -1px;
-    right: -1px;
     z-index: 1;
-    opacity: 0.65;
     cursor: pointer;
 }
-#TOC .toc-collapse-toggle-button:hover {
-    opacity: 1.0;
-}
 #TOC.collapsed .toc-collapse-toggle-button {
-    background-image: url('/static/img/icon/list-tree.svg');
+    background-image: var(--GW-svg-chevron-left);
+    background-position: center right;
     width: 100%;
     height: 100%;
+    top: 0;
+    right: 0;
+    border: none;
+    padding: 0.25em 0.375em 0.25em 0.375em;
+}
+@media only screen and (hover: hover) {
+	#TOC .toc-collapse-toggle-button:hover {
+		background-color: var(--GW-collapse-disclosure-button-hover-color);
+		background-image: var(--GW-svg-chevron-down-hover);
+		outline: 1px dotted currentColor;
+	}
+	#TOC.collapsed .toc-collapse-toggle-button:hover {
+		background-image: var(--GW-svg-chevron-left-hover);
+	}
 }
 
 @media all and (max-width: 649px) {
     #TOC:not(.collapsed) {
-        margin-top: 3rem;
+        margin-top: 3.75em;
     }
     #TOC:not(.collapsed) .toc-collapse-toggle-button {
         top: -1.75em;
@@ -744,6 +772,16 @@ section:target > :first-child a::after {
         padding: 3px;
         box-sizing: border-box;
         opacity: 1.0;
+    }
+    /*	Extended tap area.
+     */
+    #TOC:not(.collapsed) .toc-collapse-toggle-button::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: -100%;
+        top: 0;
     }
 }
 
