Fix some blockquote layout/styling bugs

--- a/css/default.css
+++ b/css/default.css
@@ -1163,7 +1163,7 @@ blockquote {
 
 #markdownBody blockquote {
     clear: none;
-    overflow: auto;
+    overflow: visible;
 }
 
 blockquote blockquote {
